--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
@@ -56,15 +55,15 @@
             </div>
             <div class="section-content-div">
                 <div id="profilePhoto">
-                        <img id="profilePhoto" src="https://cdn3.vectorstock.com/i/1000x1000/85/12/athlete-fitness-female-avatar-vector-12798512.jpg" alt="">
+                        <img id="profilePhoto" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/45000748_10212750145735203_1763860063929237504_n.jpg?_nc_cat=105&_nc_ht=scontent-sjc3-1.xx&oh=31440d531897f36729ebd78ed0e5a86d&oe=5C3EDCF3" alt="">
                 </div>
-                    <h2>Motto: Stay Fit Folks!</h2> 
-                    <p id="userName">Name: Mel Reyes</p>
-                    <p id="userAge">Age: Old :-D</p>
-                    <p id="userWeight">Current Weight: 150 lbs.</p>
-                    <p id="userGoal">What is your goal: Lose weight - reach 140 lbs.</p>
-                    <p id="userGoalStatus">Are you on track with your goal? No</p>
-                    <p id="userExercises">Your exercises or activities: Weight lifting, bodybuilding, slide board/skating, walking, tennis, swimming, 
+                    <h2 class="userProfile" name="userMotto">Motto: Stay fit, folks!</h2> 
+                    <p class="userProfile" name="userName">Name: Mel Reyes</p>
+                    <p class="userProfile" name="userAge">Age: Old :-D</p>
+                    <p class="userProfile" name="userWeight">Current Weight: 150 lbs.</p>
+                    <p class="userProfile" name="userGoal">The goal: Lose weight - reach 140 lbs.</p>
+                    <p class="userProfile" name="userGoalStatus">On track with the goal? No</p>
+                    <p class="userProfile" name="userExercises">Exercises or activities: Weight lifting, bodybuilding, slide board/skating, walking, tennis, swimming, 
                         indoor wall climbing, bicycling, parkor, running, hiking, gym, cardio, dancing, badminton, kayaking, etc.
                     </p>
             </div>
@@ -78,7 +77,7 @@
             </div>    
             <div class="section-content-div">                 
                 <table id="chart">
-                    Insert graph here (API from mongoDB or mySQL)
+                    Insert graph here (API from mySQL)
                 </table>
             </div>
         </div>
@@ -160,7 +159,7 @@
         <div id="userVideosDiv" class="divSection">
             <div class="section-header-div">
                 <div class="section-title-div">
-                    <h3 class="section-title">Videos</h3>
+                    <h3 class="section-title">Training Videos</h3>
                 </div>
                 <div class="search-field-section">
                     <form action="/search/...myfitnessjournal_db...something like that" class method="get">
@@ -172,12 +171,14 @@
                 </div>
             </div>
             <div class="section-content-div">
-                <iframe width="540" height="290" src="https://www.youtube.com/embed/Y5vNEJwlDCU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <iframe width="540" height="290" src="https://www.youtube.com/embed/GhXoPBvfBVs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/JgflvVaIJUc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>            
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/hEYLUNgxon0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/hS82Wlo67O0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z5VkKy2taMQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/s_Z0jdQ1XY8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/hyle34Gl0O0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/MnTtBXov2o0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/nOWjU9Hrpb8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/J4k1bnyftMA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/uXmB36Jjeqs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/GFJ7US1R3ig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
+                <iframe width="876" height="493" src="https://www.youtube.com/embed/T8kFXUSfiK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>    
         </div>
 
@@ -196,9 +197,13 @@
                 </div>
             </div>                
             <div class="section-content-div">            
-                <img src="https://s3-media4.fl.yelpcdn.com/bphoto/dFDFFPD97P49Xk2S1Qcx5g/ls.jpg" alt="somebody fit">            
-                <img src="https://i.pinimg.com/originals/8a/a3/9c/8aa39c13c1bbb041d707b8f1916c44af.jpg" alt="Nicole Wilkins">            
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0AvuN9a6ShXn2DN2RtsrEtG72SEZHmmso5EzUuQ8vu7GMmLuIjA" alt="somebody fit">         <img src="https://i.pinimg.com/originals/5d/97/a3/5d97a325e5d1dee70dbac348a19e31e5.jpg" alt="Nicole Wilkins">            
+                <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/45030852_10212750148135263_2499147104815939584_n.jpg?_nc_cat=105&_nc_ht=scontent-sjc3-1.xx&oh=28ef35144cddb2bca182cafa2d13ecf1&oe=5C825A2D" alt="mel">            
+                <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/45123601_10212750146735228_8752472883378257920_n.jpg?_nc_cat=105&_nc_ht=scontent-sjc3-1.xx&oh=f4170d2d61b274d974338ae631633213&oe=5C86DC87" alt="mel">            
+                <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/45116289_10212750192856381_2428245024484360192_n.jpg?_nc_cat=105&_nc_ht=scontent-sjc3-1.xx&oh=3310acc0226139547b7d4e32c2bc9182&oe=5C3DB50A" alt="mel">         
+                <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/45163651_10212750147695252_6018001397973254144_n.jpg?_nc_cat=105&_nc_ht=scontent-sjc3-1.xx&oh=43a1487b7636b11a4a3de529165caeef&oe=5C7EF6DA" alt="mel">
+                <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/45087154_10212750147815255_4557829739875663872_n.jpg?_nc_cat=100&_nc_ht=scontent-sjc3-1.xx&oh=06805f7a72528348a3f51e154a0a76e1&oe=5C7A02C0" alt="mel">         
+                <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/45098229_10212750145575199_4855504117751087104_n.jpg?_nc_cat=100&_nc_ht=scontent-sjc3-1.xx&oh=fa5a2a18ec0258d0f3f223b89331d842&oe=5C44308F" alt="mel">
+                
             </div>  
         </div>   
             
